--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
         <option>G2</option>
         <option>G3</option>
         <option>G4</option>
+        <option>Baby Honda</option>
     </select>
 
     <input type="text" id="siteCode" placeholder="CAIxxxx" value="CAI" />
