--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </select>
 
     <input type="text" id="siteCode" placeholder="CAIxxxx" value="CAI" />
-    <input type="text" id="ticketNumber" placeholder="رقم تذكرة التسكين" />
+    <input type="text" id="ticketNumber" placeholder="رقم تكت التسكين" />
 
 
     <div class="row">
